Re-ordering figures and tables

--- a/2_Assessment.Rmd
+++ b/2_Assessment.Rmd
@@ -14,7 +14,7 @@ The NWFSC shelf-slope survey is based on a random-grid design; covering the coas
 
 The data from the NWFSC shelf-slope survey was analyzed using a spatio-temporal delta-generalized linear mixed model (VAST delta-GLMM) [@thorson_comparing_2017]. Predicted fish biomass density is derived as the product of a "delta" portion for the probability of a non-zero catch and a second portion for the magnitude of the non-zero catches.  Further, the geostatistical GLMM framework can accommodate spatial autocorrelation.  Additional information about the approach and the software package it is implemented in are available from www.fishstats.org. \hl{describe VAST}
 
-The smallest `r spp` tend to occur in the shallower depths (< 200 m) with only larger individuals occuring at depths deeper than 300 m. Data collected by the NWFSC Shelf-Slope survey between depths of 55 - 549 m and north of $42^circ$ and south of $49^circ$ were stratified to generate an index of abundance from 2003-2016. The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year and vessel effects had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:nw_qq}).  The indices for the NWFSC shelf-slope survey show a tentative decline in the population between 2003 and 2009, with an increasing trend in biomass between the 2009 and 2016 median point estimates.
+The smallest `r spp` tend to occur in the shallower depths (< 200 m) with only larger individuals occurring at depths deeper than 300 m. Data collected by the NWFSC Shelf-Slope survey between depths of 55 - 549 m and north of $42^circ$ and south of $49^circ$ were stratified to generate an index of abundance from 2003-2016. The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year and vessel effects had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:nw_qq}).  The indices for the NWFSC shelf-slope survey show a tentative decline in the population between 2003 and 2009, with an increasing trend in biomass between the 2009 and 2016 median point estimates.
 
 Length, age, and conditional age-at-length compositions were expanded based upon the stratification.  The number of tows with length data ranged from 33 in 2006 to 69 in 2015 (Table \ref{tab:NWcombo_Lengths}) where ages were collected for `r spp` in nearly every tow (Table \ref{tab:NWcombo_Ages}).  The expanded length frequencies from this survey show an increase in small fish starting in 2010 (Figure \ref{fig:nw_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999, 2000, and 2008 recruitment; with early indications of a large 2013 recruitment (Figure \ref{fig:nw_Age}).
 
@@ -22,16 +22,16 @@ Length, age, and conditional age-at-length compositions were expanded based upon
 
 The NWFSC slope survey covered waters throughout the summer from 183 m to 1280 m north of $34^\circ 30^\prime$ S, which is near Point Conception between 1999 and 2002.  Tows conducted between the depths of 183 and 549 m were used to create an index of abundance using the VAST delta-GLMM model.  The estimated index of abundance is show in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  \hl{The Q-Q plot does not show any departures from the assumed distribution (Figure XXXX}). } The trend of abundance across the four surveys years was generally flat with high estimated annual variance.
 
-Length and age compositions were available for 2001 and 2002 and were expanded based upon the survey stratifcation (Tables \ref{tab:NWslope_Lengths} and \ref{tab:NWslope_Ages}.  The expanded length frequencies from this survey shows that primarily only large fish were captured both years (Figure \ref{fig:nw_slope_Length}).  The majority of fish observed by this survey were aged at greater than 10 years (Figure \ref{fig:nw_slope_Age}).
+Length and age compositions were available for 2001 and 2002 and were expanded based upon the survey stratification (Tables \ref{tab:NWslope_Lengths} and \ref{tab:NWslope_Ages}.  The expanded length frequencies from this survey shows that primarily only large fish were captured both years (Figure \ref{fig:nw_slope_Length}).  The majority of fish observed by this survey were aged at greater than 10 years (Figure \ref{fig:nw_slope_Age}).
 
 
 ###Alaska Fisheries Science Center (AFSC) slope survey 
 
 The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the U.S. west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys plus 1996, which surveyed north of $43^\circ$ N latitude to the U.S.-Canada border, were used in this assessment. The number of tows with length data ranged from 19 in 2000 to 48 in 1996 (Table \ref{tab:AFSC_Lengths}).  Because a large number of positive tows occurred in 1996, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the U.S.-Canada border. Therefore, only tows from $43^\circ$ N latitude to the U.S.-Canada border were used.
 
-An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distrubution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:afsc_qq}).  The trend in the indices was generally flat over time.
+An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:afsc_qq}).  The trend in the indices was generally flat over time.
 
-Length compositions were available for each year the survey was conducted.  No age data were avaialable from this survey.  The expanded length frequencies from this survey were generally of larger fish ( > 30 cm), expect for 1997 where the highest frequency of fish were between 20 and 30 cm for both females and males (Figure \ref{fig:afsc_Lengths}). 
+Length compositions were available for each year the survey was conducted.  No age data were available from this survey.  The expanded length frequencies from this survey were generally of larger fish ( > 30 cm), expect for 1997 where the highest frequency of fish were between 20 and 30 cm for both females and males (Figure \ref{fig:afsc_Lengths}). 
 
 ###Triennial Bottom Trawl Survey
 
@@ -43,13 +43,13 @@ Given the different depths surveyed during 1977, the data from that year were no
 
 An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:tri_qq}).  The index shows a decline in abundance in the early years of the time-series and abundance remaining flat for the latter years.  
 
-Length and age compositions were expanded based upon the stratification.  The number of tows with length data ranged from 17 in 1986 to 81 in 1998 \ref{tab:TriennialLengths}.  Ages were read using surface reading methods until 1989 when the break-and-burn method replaced surface reads as the best method to age `r spp`.  Unfortunately, surface reading of `r spp` otoliths results in significant underestimates of age.  Due to this, these otolith were excluded from analysis.  The availabe ages from the Triennial survey and the number of tows where otoliths were collected are shown in Table \ref{tab:Triennial_Ages}.  The expanded length frequencies from this survey show an increase in small fish starting in 1995 (Figure \ref{fig:Tri_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999 and 2000 recruitment (Figure \ref{fig:Tri_Age}).
+Length and age compositions were expanded based upon the stratification.  The number of tows with length data ranged from 17 in 1986 to 81 in 1998 \ref{tab:TriennialLengths}.  Ages were read using surface reading methods until 1989 when the break-and-burn method replaced surface reads as the best method to age `r spp`.  Unfortunately, surface reading of `r spp` otoliths results in significant underestimates of age.  Due to this, these otolith were excluded from analysis.  The available ages from the Triennial survey and the number of tows where otoliths were collected are shown in Table \ref{tab:Triennial_Ages}.  The expanded length frequencies from this survey show an increase in small fish starting in 1995 (Figure \ref{fig:Tri_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999 and 2000 recruitment (Figure \ref{fig:Tri_Age}).
 
 ###Pacific ocean perch Survey
 
-A survey targeted designed to sample `r spp` was conducted in 1979 and again in 1985 (for a detailed description see [@ianelli_status_1992].  TAn index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:pop_qq}).  The index shows a clear decline in abundance between the two survey years. 
+A survey targeted designed to sample `r spp` was conducted in 1979 and again in 1985 (for a detailed description see [@ianelli_status_1992].  An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:pop_qq}).  The index shows a clear decline in abundance between the two survey years. 
 
-Length and age compositions were expanded based on the stratification. The survey had 125 and 126 `r spp` tows (Table \ref{tab:POP_Lengths}) and ages were only availabe in 1985 due to surface reads for the 1979 data (Table \ref{tab:POP_Ages}). The length frequencies for both years are highest between the 30-45 cm range (Figure \ref{fig:POP_Length}) with ages in 1985 having a large number of fish age 40 and greater (Figure \ref{fig:POP_Age}).
+Length and age compositions were expanded based on the stratification. The survey had 125 and 126 `r spp` tows (Table \ref{tab:POP_Lengths}) and ages were only available in 1985 due to surface reads for the 1979 data (Table \ref{tab:POP_Ages}). The length frequencies for both years are highest between the 30-45 cm range (Figure \ref{fig:POP_Length}) with ages in 1985 having a large number of fish age 40 and greater (Figure \ref{fig:POP_Age}).
 
 
 <!-- ********************************************************************** -->
@@ -61,11 +61,11 @@ Length and age compositions were expanded based on the stratification. The surve
 
 **Washington**
 
-Historical commercial fishery landigns of `r spp` from Washington for the years 1918-2016 were obtained from Theresa Tsou (WDFW) and Phillip Weyland (WDFW).  This assessment is the first `r spp` assessment to include a state provide historical catch reconstruction and hence, the historical catches for Washington vary markedly from those used in the 2011 assessment.  Due to Recent landings (1981-2016) were obtained directly from Washington state rather than from PacFIN (Pacific Fisheries Information Network (PacFIN) due to identified missing catches not available within PacFIN for `r spp`.
+Historical commercial fishery landings of `r spp` from Washington for the years 1918-2016 were obtained from Theresa Tsou (WDFW) and Phillip Weyland (WDFW).  This assessment is the first `r spp` assessment to include a state provide historical catch reconstruction and hence, the historical catches for Washington vary markedly from those used in the 2011 assessment.  Due to Recent landings (1981-2016) were obtained directly from Washington state rather than from PacFIN (Pacific Fisheries Information Network (PacFIN) due to identified missing catches not available within PacFIN for `r spp`.
 
 **Oregon**
 
-Historical commercial fishery landings of `r spp` from Oregon for the years 1892-1986 were obtained from Alison Dauble (ODFW). A description of the methods can be found in Karnowski et al. [-@karnowski_historical_2014]. Recent landings (1987-2016) were obtained from PacFIN retrieval dated May 2, 2017}, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).  The catch data in from the POP and POP2 categories contained within PacFIN for `r spp` were used for this assessment.  Additional cathes from 1987-1999 for `r spp` under the UROCK category not yet available in PacFIN were received directly from the state and combined with the catch data available for that period within PacFIN.
+Historical commercial fishery landings of `r spp` from Oregon for the years 1892-1986 were obtained from Alison Dauble (ODFW). A description of the methods can be found in Karnowski et al. [-@karnowski_historical_2014]. Recent landings (1987-2016) were obtained from PacFIN retrieval dated May 2, 2017}, Pacific States Marine Fisheries Commission, Portland, Oregon; www.psmfc.org).  The catch data in from the POP and POP2 categories contained within PacFIN for `r spp` were used for this assessment.  Additional catches from 1987-1999 for `r spp` under the UROCK category not yet available in PacFIN were received directly from the state and combined with the catch data available for that period within PacFIN.
 
 **California**
 
@@ -91,7 +91,7 @@ The second source is from the West Coast Groundfish Observer Program (WCGOP).  T
 Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas (Table \ref{tab:CPUE_Summary} from Gunderson [-@gunderson_population_1977]).  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggest that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  A CV of 0.40 was used in this assessment to be consistent with the CV observed in the survey data.
 
 ###Fishery Length And Age Data
-Biological data from commercial fisheries that caught `r spp` were extracted from PacFIN (PFSMFC) on \hl{XXXX}.  Lengths taken during port sampling in Oregon and Washington were used to calculate length and age compositions.  There were no biological data for `r spp` available within PacFIN.  The overwhelming majority of these data were collected from the bottom trawl fishery, but there additional biological data were collected from non-trawl gear was grouped together with all data available. Tables \ref{tab:Comm_Lengths} and \ref{tab:Comm_Ages} show the number of trips and fish sampled, along with the calculated sample sizes.  The sample sizes were calculated as:
+Biological data from commercial fisheries that caught `r spp` were extracted from PacFIN (PFSMFC) on \hl{XXXX}.  Lengths taken during port sampling in Oregon and Washington were used to calculate length and age compositions.  There were no biological data for `r spp` available within PacFIN.  The overwhelming majority of these data were collected from the mid-water and bottom trawl gear, but additional biological data were collected from non-trawl gear which was grouped together with trawl gear data. Tables \ref{tab:Comm_Lengths} and \ref{tab:Comm_Ages} show the number of trips and fish sampled, along with the calculated sample sizes.  The sample sizes were calculated as:
 
 $N_{input} = N_{tows} + 0.138 * N_{fish}$
 
@@ -147,7 +147,7 @@ Uncertainty surrounding the ageing-error process for `r spp` was incorporated by
 Include: Response to STAR panel recommendations from the most recent previous 
 assessment.
 
-Recommendation: Considering transboundary stock effects should be pursued. In particular the consequences of having spawning contributions from external stock components should be evaluated relative to the steepness estimates obtained in the present assessment (see more complete discussion of this recommendation under the Unresolved Problems and Major Uncertainties section, above).
+Recommendation: Considering trans-boundary stock effects should be pursued. In particular the consequences of having spawning contributions from external stock components should be evaluated relative to the steepness estimates obtained in the present assessment (see more complete discussion of this recommendation under the Unresolved Problems and Major Uncertainties section, above).
 
 *STAT response: The STAT team agrees that this should be an ongoing area of research and collaboration between the US and Canada.  This assessment presents a sensitivity where the inclusion of Canadian data are included within the model.*
 
